Move dark mode switch to navBar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <h1 id="home">Hello!</h1>
             <p>&nbsp;</p>
             <h2>My name is Woo-Sik Choi</h2>
-            <button id="switch">Dark/Light Mode Switch</button>
             <p>&nbsp;</p>
             <div class="location">
                 <img src="img/pin-icon-light-128.png" alt="Location pin logo" width="30px" height="auto">
@@ -39,13 +38,18 @@
             </div>
         </div>
         <div class="navBar">
-            <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#projects">PROJECTS</a></li>
-                <li><a href="#resume">RESUME</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
+            <div class="navBarLinks">
+                <ul>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#projects">PROJECTS</a></li>
+                    <li><a href="#resume">RESUME</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="navBarDarkModeIcon">
+                <button id="switch">Dark / Light Mode</button>
+            </div>
         </div>
         <div class="content">
             <div class="about">
