Add dark mode img to button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 </ul>
             </div>
             <div class="navBarDarkModeIcon">
-                <button id="switch">Dark / Light Mode</button>
+                <button id="switch">
+                    <img src="img/darkmode-icon-128.png" alt="Dark and light mode icon" width="20px" height="auto">
+                </button>
             </div>
         </div>
         <div class="content">
