Add margin to <p> for full screen and fix footer

--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
     <footer>
         <div class="footerMessage">
             <p>
-                LAST UPDATED: JULY 2021
+                LAST UPDATED: <span>JULY 2021</span><br>
+                BUILT BY: <span>WOO-SIK CHOI</span><br>
             </p>
         </div>
     </footer>
