Done restructuring navbar with grid and flex

--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
         </div>
         <div class="navBar">
             <div class="navBarLinks">
+                <div class="homeLink">
+                    <a href="#home">HOME</a>
+                </div>
+                <div class="aboutLink">
+                    <a href="#about">ABOUT</a>
+                </div>
+                <div class="projectsLink">
+                    <a href="#projects">PROJECTS</a>
+                </div>
+                <div class="resumeLink">
+                    <a href="#resume">RESUME</a>
+                </div>
+                <div class="contactLink">
+                    <a href="#contact">CONTACT</a>
+                </div>
+            </div>
+            <div class="darkmodeButton">
+                <div class="navBarDarkModeIcon">
+                    <button id="switch">
+                        <img src="img/darkmode-icon-128.png" alt="Dark and light mode icon" width="30px" height="30px" style="padding-top: 3px;">
+                    </button>
+                </div>
+            </div>
+
+            <!-- <div class="navBarLinks">
                 <ul>
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
@@ -46,7 +71,7 @@
                     <li><a href="#resume">RESUME</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         <div class="content">
             <div class="about">
@@ -179,11 +204,11 @@
             </p>
         </div>
     </footer>
-    <div class="navBarDarkModeIcon">
+    <!-- <div class="navBarDarkModeIcon">
         <button id="switch">
             <img src="img/darkmode-icon-128.png" alt="Dark and light mode icon" width="30px" height="auto">
         </button>
-    </div>
+    </div> -->
     <script src="app.js"></script>
 </body>
 
