Fix home link #, add span style, add different dark mode button style for full screen

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <h1 id="home">Hello!</h1>
             <p>&nbsp;</p>
             <h2>My name is Woo-Sik Choi</h2>
-            <p>&nbsp;</p>
-            <div class="location">
+            <!-- <p>&nbsp;</p> -->
+            <!-- <div class="location">
                 <img src="img/pin-icon-light-128.png" alt="Location pin logo" width="30px" height="auto">
                 <h4>Austin, TX</h4>
-            </div>
+            </div> -->
         </div>
         <div class="navBar">
             <div class="navBarLinks">
                 <div class="homeLink">
-                    <a href="#home">HOME</a>
+                    <a href="#">HOME</a>
                 </div>
                 <div class="aboutLink">
                     <a href="#about">ABOUT</a>
@@ -80,8 +80,8 @@
                     <img src="img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="150px" height="150px">
                     <h3>ABOUT WOO-SIK</h3>
                     <p>
-                        I am a software developer with a background with STEM education and cancer related research as
-                        well as the Army nursing.<br>&nbsp;<br>
+                        I am a <span>SOFTWARE DEVELOPER</span> with a background with <span>STEM EDUCATION</span> and cancer related research as
+                        well as the <span>ARMY NURSING</span>. I am currently located in <span>AUSTIN, TX</span>.<br>&nbsp;<br>
                         I am a critical thinker and like to pay attention to details.<br>&nbsp;<br>
                         I play the violin and love cooking, running, swimming, biking, and skiing.<br>&nbsp;<br>
                         I also enjoy building and fixing stuff.
@@ -115,7 +115,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The gitNoms is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers. Technologies used: HTML, CSS, JavaScript, React, MongoDB, and Mongoose. CLICK the screenshot for active link or check out my GitHub Repository!
+                            The <span>gitNoms</span> is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, React, MongoDB, and Mongoose</span>. CLICK the screenshot for active link or check out my GitHub Repository!
                         </p>
                     </div>
                 </div>
@@ -129,8 +129,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The COVID-19 Numbers App shows on-demand COVID related numbers. Technologies used: HTML, CSS,
-                            JavaScript, React, and 3rd party API. CLICK the screenshot for active link or check out my
+                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numberical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, React, and 3rd party API</span>. CLICK the screenshot for active link or check out my
                             GitHub Repository!
                         </p>
                     </div>
@@ -145,9 +144,9 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The MINI OMOK is a simplified version of Korean game called Omok. To win the game, connect 5
-                            stones with same color in the vertical, horizontal or diagonal direction. Technologies used:
-                            HTML, CSS, and JavaScript. CLICK the screenshot for playing game or check out my GitHub
+                            The <span>MINI OMOK</span> is a simplified version of a Korean game called Omok. To win the game, connect 5
+                            stones with same color in the vertical, horizontal or diagonal direction.<br>&nbsp;<br>Technologies used:
+                            <span>HTML, CSS, and JavaScript</span>. CLICK the screenshot for playing game or check out my GitHub
                             Repository!
                         </p>
                     </div>
