Add project 3 screenshot and links

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                     4
                 </div> -->
                 <div class="project3">
-                    <h3>GITNOMS (COMMING SOON)</h3>
+                    <h3>GITNOMS</h3>
                     <div>
-                        <a href="#" target="_blank"><img class="screenshot"
-                                src="img/construction-icon.png" alt="Project 3 Screen Shot" width="269"
-                                height="153.06"></a>
-                        <a href="#" target="_blank"><img class="gitRepo"
+                        <a href="https://gitnoms.netlify.app/" target="_blank"><img class="screenshot"
+                                src="img/Project-3-Img-20210725.png" alt="Project 3 Screen Shot" width="100%"
+                                height="auto"></a>
+                        <a href="https://github.com/TheCodingChefs" target="_blank"><img class="gitRepo"
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
