--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                             <li>MongoDB</li>
                             <li>Mongoose</li>
                             <li>Git</li>
+                            <li>Python</li>
+                            <li>Django</li>
                         </ul>
                     </div>
                 </div>
