Add typing animation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="title">
-            <h1 id="home">Hello!</h1>
+            <h1 id="home" class="typing">Hello!</h1>
             <p>&nbsp;</p>
             <h2>My name is Woo-Sik Choi</h2>
             <!-- <p>&nbsp;</p> -->
