Fix navBar padding

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="project2">
+                <div class="project2 project">
                     <h3>COVID-19 NUMBERS APP</h3>
                     <div>
                         <a href="https://woosik-covid-19-numbers.netlify.app/" target="_blank"><img class="screenshot"
@@ -150,7 +150,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="project1">
+                <div class="project1 project">
                     <h3>MINI OMOK (오목)</h3>
                     <div>
                         <a href="https://dvlprwchoi.github.io/omok-game/" target="_blank"><img class="screenshot"
