--- a/index.html
+++ b/index.html
@@ -107,9 +107,21 @@
                 <div id="projects" class="projectsTitleDiv">
                     <h3>PROJECTS</h3>
                 </div>
-                <!-- <div class="project4">
-                    4
-                </div> -->
+                <div class="project4">
+                    <h3>Coffeeholic</h3>
+                    <div>
+                        <a href="https://woosik-coffeeholic.netlify.app/" target="_blank"><img class="screenshot" src="img/project-4-img-20210811.png" alt="Project 4 Screen Shot" width="100%" height="auto"></a>
+                        <a href="https://github.com/dvlprwchoi/coffeeholic-frontend" target="_blank"><img class="gitRepo"
+                        src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
+                        height="30px"></a>
+                        <a href="https://github.com/dvlprwchoi/coffeeholic-backend" target="_blank"><img class="gitRepo"
+                        src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
+                        height="30px"></a>
+                    <p>
+                        The <span>Coffeeholic</span> is an online memo application for your favorite coffee shops. This is a full-stack application with CRUD functionality and user authentication.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, Python, Django, and PostgreSQL</span>. CLICK the screenshot for live site or check out my GitHub Repositories for frontend and backend!
+                    </p>
+                    </div>
+                </div>
                 <div class="js-calculator project">
                     <h3>JavaScript Calculator</h3>
                     <div>
