Update some words

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h3>PROJECTS</h3>
                 </div>
                 <div class="project4">
-                    <h3>Coffeeholic</h3>
+                    <h3>COFFEEHOLIC</h3>
                     <div>
                         <a href="https://woosik-coffeeholic.netlify.app/" target="_blank"><img class="screenshot" src="img/project-4-img-20210811.png" alt="Project 4 Screen Shot" width="100%" height="auto"></a>
                         <a href="https://github.com/dvlprwchoi/coffeeholic-frontend" target="_blank"><img class="gitRepo"
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="js-calculator project">
-                    <h3>JavaScript Calculator</h3>
+                    <h3>JAVASCRIPT CALCULATOR</h3>
                     <div>
                         <a href="https://dvlprwchoi.github.io/js-calculator" target="_blank"><img class="screenshot"
                                 src="img/js-calculator-img-20210728.png" alt="JavaScript Calculator Screen Shot" width="100%"
@@ -146,7 +146,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The <span>gitNoms</span> is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, React, MongoDB, and Mongoose</span>. CLICK the screenshot for active link or check out my GitHub Repository!
+                            The <span>gitNoms</span> is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, Mongoose, and MongoDB</span>. CLICK the screenshot for live site or check out my GitHub Repository!
                         </p>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numberical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, React, and 3rd party API</span>. CLICK the screenshot for active link or check out my
+                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numberical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>. CLICK the screenshot for live site or check out my
                             GitHub Repository!
                         </p>
                     </div>
@@ -229,7 +229,7 @@
     <footer>
         <div class="footerMessage">
             <p>
-                LAST UPDATED: <span>JULY 2021</span><br>
+                LAST UPDATED: <span>AUGUST 2021</span><br>
                 BUILT BY: <span>WOO-SIK CHOI</span><br>
             </p>
         </div>
