--- a/index.html
+++ b/index.html
@@ -92,12 +92,15 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
-                            <li>React</li>
+                            <li>ReactJS</li>
                             <li>MongoDB</li>
                             <li>Mongoose</li>
                             <li>Git</li>
                             <li>Python</li>
                             <li>Django</li>
+                            <li>PostgreSQL</li>
+                            <li>Netlify</li>
+                            <li>Heroku</li>
                         </ul>
                     </div>
                 </div>
