Update project 4 class

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div id="projects" class="projectsTitleDiv">
                     <h3>PROJECTS</h3>
                 </div>
-                <div class="project4">
+                <div class="project4 project">
                     <h3>COFFEEHOLIC</h3>
                     <div>
                         <a href="https://woosik-coffeeholic.netlify.app/" target="_blank"><img class="screenshot" src="img/project-4-img-20210811.png" alt="Project 4 Screen Shot" width="100%" height="auto"></a>
