Add resume link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div id="resume" class="resumeText">
                     <h3>RESUME</h3>
                     <p>
-                        Link to resume site
+                        Click <a href="https://drive.google.com/file/d/1so9so0Udr-Jc97oxYu-dDcVXXq4uN2Sx/view?usp=sharing" target="_blank">HERE</a> to see my resume
                     </p>
                 </div>
             </div>
