Update about me paragraph

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <img src="img/Profile-Picture.jpg" alt="Woo-Sik's profile picture" width="255px" height="255px">
                     <h3>ABOUT WOO-SIK</h3>
                     <p>
-                        I am a <span>SOFTWARE DEVELOPER</span> with a background with <span>STEM EDUCATION</span> and cancer related research as
-                        well as the <span>ARMY NURSING</span>. I am currently located in <span>AUSTIN, TX</span>.<br>&nbsp;<br>
+                        I am a <span>SOFTWARE DEVELOPER</span> with a background in <span>STEM</span> education and cancer related research, as
+                        well as <span>ARMY NURSING</span>. I am currently located in <span>AUSTIN, TX</span>.<br>&nbsp;<br>
                         I am a critical thinker and like to pay attention to details.<br>&nbsp;<br>
                         I play the violin and love cooking, running, swimming, biking, and skiing.<br>&nbsp;<br>
                         I also enjoy building and fixing stuff.
