Update projects description

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                             <li>CSS</li>
                             <li>JavaScript</li>
                             <li>ReactJS</li>
-                            <li>MongoDB</li>
                             <li>Mongoose</li>
+                            <li>MongoDB</li>
                             <li>Git</li>
                             <li>Python</li>
                             <li>Django</li>
@@ -105,10 +105,11 @@
                     </div>
                 </div>
             </div>
-            <div class="projects">
+            <div class="projects project">
                 <!-- <p id="projects">&nbsp;</p> -->
                 <div id="projects" class="projectsTitleDiv">
                     <h3>PROJECTS</h3>
+                    <p>CLICK screenshot images for live sites or GitHub logos for my codes!</p>
                 </div>
                 <div class="project4 project">
                     <h3>COFFEEHOLIC</h3>
@@ -121,7 +122,7 @@
                         src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                         height="30px"></a>
                     <p>
-                        The <span>Coffeeholic</span> is an online memo application for your favorite coffee shops. This is a full-stack application with CRUD functionality and user authentication.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, Python, Django, and PostgreSQL</span>. CLICK the screenshot for live site or check out my GitHub Repositories for frontend and backend!
+                        The <span>Coffeeholic</span> is an online memo application for your favorite coffee shops. This is a full-stack application with CRUD functionality and user authentication.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, Python, Django, and PostgreSQL</span>.
                     </p>
                     </div>
                 </div>
@@ -135,7 +136,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The <span>JavaScript Calculator</span> is a calculator with basic functionality.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, and JavaScript</span>. CLICK the screenshot for active link or check out my GitHub Repository!
+                            The <span>JavaScript Calculator</span> is a calculator with basic functionality.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, and JavaScript</span>.
                         </p>
                     </div>
                 </div>
@@ -149,7 +150,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The <span>gitNoms</span> is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, Mongoose, and MongoDB</span>. CLICK the screenshot for live site or check out my GitHub Repository!
+                            The <span>gitNoms</span> is an online recipe application. Users can easily upload, edit, or delete their own receipes. This full-stack application project was a group project with 3 other developers.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, Mongoose, and MongoDB</span>.
                         </p>
                     </div>
                 </div>
@@ -163,8 +164,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numberical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>. CLICK the screenshot for live site or check out my
-                            GitHub Repository!
+                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numberical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>.
                         </p>
                     </div>
                 </div>
@@ -180,8 +180,7 @@
                         <p>
                             The <span>MINI OMOK</span> is a simplified version of a Korean game called Omok. To win the game, connect 5
                             stones with same color in the vertical, horizontal or diagonal direction.<br>&nbsp;<br>Technologies used:
-                            <span>HTML, CSS, and JavaScript</span>. CLICK the screenshot for playing game or check out my GitHub
-                            Repository!
+                            <span>HTML, CSS, and JavaScript</span>.
                         </p>
                     </div>
                 </div>
