Fix typo numerical

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 src="img/GitHub-Mark-120px-plus.png" alt="Github Repository" width="30px"
                                 height="30px"></a>
                         <p>
-                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numberical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>.
+                            The <span>COVID-19 Numbers App</span> shows on-demand COVID-19 related numerical data.<br>&nbsp;<br>Technologies used: <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>.
                         </p>
                     </div>
                 </div>
