Add twitter info

--- a/index.html
+++ b/index.html
@@ -379,6 +379,23 @@
                 >dvlpr.wchoi@gmail.com</a
               >
             </div>
+            <div class="item7">
+              <a href="https://www.twitter.com/dvlprwchoi" target="_blank"
+                ><img
+                  src="img/Logo-Gmail-9952.png"
+                  alt="twitter.com/dvlprwchoi"
+                  width="55px"
+                  height="55px"
+              /></a>
+            </div>
+            <div class="item8">
+              <a
+                href="https://www.twitter.com/dvlprwchoi"
+                target="_blank"
+                id="twitterLinkText"
+                >twitter.com/dvlprwchoi</a
+              >
+            </div>
           </div>
         </div>
       </div>
