Change linkedin img and size

--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
             <div class="item1">
               <a href="https://www.linkedin.com/in/woosikchoi/" target="_blank"
                 ><img
-                  src="img/LI-In-Bug.png"
+                  src="img/linkedin.png"
                   alt="linkedin.com/in/woosikchoi"
-                  width="65px"
-                  height="58px"
+                  width="55px"
+                  height="55px"
               /></a>
             </div>
             <div class="item2">
@@ -382,7 +382,7 @@
             <div class="item7">
               <a href="https://www.twitter.com/dvlprwchoi" target="_blank"
                 ><img
-                  src="img/Logo-Gmail-9952.png"
+                  src="img/twitter.png"
                   alt="twitter.com/dvlprwchoi"
                   width="55px"
                   height="55px"
