--- a/index.html
+++ b/index.html
@@ -125,14 +125,15 @@
                 <li>CSS</li>
                 <li>JavaScript</li>
                 <li>ReactJS</li>
-                <li>Mongoose</li>
+                <li>Node.js</li>
+                <!-- <li>Mongoose</li> -->
                 <li>MongoDB</li>
-                <li>Git</li>
+                <li>Git/GitHub</li>
                 <li>Python</li>
                 <li>Django</li>
                 <li>PostgreSQL</li>
-                <li>Netlify</li>
-                <li>Heroku</li>
+                <!-- <li>Netlify</li> -->
+                <!-- <li>Heroku</li> -->
               </ul>
             </div>
           </div>
