Re-assign id #home to body tag from .typing h1 and change .homeLink href to #home from #

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <link rel="manifest" href="favicon_io/site.webmanifest" />
   </head>
 
-  <body>
+  <body id="home">
     <header></header>
     <main>
       <div class="title">
-        <h1 id="home" class="typing">Hello!</h1>
+        <h1 class="typing">Hello!</h1>
         <p>&nbsp;</p>
         <h2>My name is Woo-Sik Choi</h2>
         <!-- <p>&nbsp;</p> -->
@@ -58,7 +58,7 @@
       <div class="navBar">
         <div class="navBarLinks">
           <div class="homeLink">
-            <a href="#">HOME</a>
+            <a href="#home">HOME</a>
           </div>
           <div class="aboutLink">
             <a href="#about">ABOUT</a>
