Add todo list app project

--- a/index.html
+++ b/index.html
@@ -147,6 +147,39 @@
               codes!
             </p>
           </div>
+          <!--  -->
+          <!-- tdl -->
+          <!--  -->
+          <div class="tdl project">
+            <h3>TODO LIST APP</h3>
+            <div>
+              <a href="https://woosik-tdl.netlify.app" target="_blank"
+                ><img
+                  class="screenshot"
+                  src="img/tdl-img-20211206.png"
+                  alt="Todo List App Screen Shot"
+                  width="100%"
+                  height="auto"
+              /></a>
+              <a href="https://github.com/dvlprwchoi/tdl" target="_blank"
+                ><img
+                  class="gitRepo"
+                  src="img/GitHub-Mark-120px-plus.png"
+                  alt="Github Repository"
+                  width="30px"
+                  height="30px"
+              /></a>
+              <p>
+                The <span>Todo List App</span> is a simple task management web
+                application built with ReactJS. A user can add and remove to-do
+                from the list. It displays total and remaining to-do number.<br />&nbsp;<br />Technologies
+                used: <span>HTML, CSS, JavaScript, and ReactJS</span>.
+              </p>
+            </div>
+          </div>
+          <!--  -->
+          <!-- coffeholic -->
+          <!--  -->
           <div class="project4 project">
             <h3>COFFEEHOLIC</h3>
             <div>
@@ -190,6 +223,9 @@
               </p>
             </div>
           </div>
+          <!--  -->
+          <!-- javascript calculator -->
+          <!--  -->
           <div class="js-calculator project">
             <h3>JAVASCRIPT CALCULATOR</h3>
             <div>
@@ -220,6 +256,9 @@
               </p>
             </div>
           </div>
+          <!--  -->
+          <!-- gitnoms -->
+          <!--  -->
           <div class="project3 project">
             <h3>GITNOMS</h3>
             <div>
@@ -250,6 +289,9 @@
               </p>
             </div>
           </div>
+          <!--  -->
+          <!-- covid-19 numbers app -->
+          <!--  -->
           <div class="project2 project">
             <h3>COVID-19 NUMBERS APP</h3>
             <div>
@@ -280,6 +322,9 @@
               </p>
             </div>
           </div>
+          <!--  -->
+          <!-- mini omok -->
+          <!--  -->
           <div class="project1 project">
             <h3>MINI OMOK (오목)</h3>
             <div>
@@ -404,7 +449,7 @@
     <footer>
       <div class="footerMessage">
         <p>
-          LAST UPDATED: <span>NOVEMBER 2021</span><br />
+          LAST UPDATED: <span>DECEMBER 2021</span><br />
           BUILT BY: <span>WOO-SIK CHOI</span><br />
         </p>
       </div>
