Add tictactoe project

--- a/index.html
+++ b/index.html
@@ -148,6 +148,38 @@
             </p>
           </div>
           <!--  -->
+          <!-- tictactoe -->
+          <!--  -->
+          <div class="tictactoe project">
+            <h3>TIC TAC TOE</h3>
+            <div>
+              <a href="https://dvlprwchoi.github.io/tictactoe" target="_blank"
+                ><img
+                  class="screenshot"
+                  src="img/tictactoe-img-20211209.png"
+                  alt="Tic Tac Toe Screen Shot"
+                  width="100%"
+                  height="auto"
+              /></a>
+              <a href="https://github.com/dvlprwchoi/tictactoe" target="_blank"
+                ><img
+                  class="gitRepo"
+                  src="img/GitHub-Mark-120px-plus.png"
+                  alt="Github Repository"
+                  width="30px"
+                  height="30px"
+              /></a>
+              <p>
+                The <span>Tic Tac Toe</span> game is built with JavaScript. This
+                application has a mobile responsive design depends on a device's
+                screen size. It also features toggling dark/light mode and game
+                reset function. The winner of the game will be displayed on the
+                top with an animation.<br />&nbsp;<br />Technologies used:
+                <span>HTML, CSS, and JavaScript</span>.
+              </p>
+            </div>
+          </div>
+          <!--  -->
           <!-- tdl -->
           <!--  -->
           <div class="tdl project">
