Add weather dashboard app

--- a/index.html
+++ b/index.html
@@ -148,6 +148,46 @@
             </p>
           </div>
           <!--  -->
+          <!-- weather-dashboard -->
+          <!--  -->
+          <div class="weather-dashboard project">
+            <h3>WEATHER DASHBOARD</h3>
+            <div>
+              <a
+                href="https://woosik-weather-dashboard.netlify.app"
+                target="_blank"
+                ><img
+                  class="screenshot"
+                  src="img/weather-dashboard-img-20211219.png"
+                  alt="Weather Dashboard Screen Shot"
+                  width="100%"
+                  height="auto"
+              /></a>
+              <a
+                href="https://github.com/dvlprwchoi/weather-dashboard"
+                target="_blank"
+                ><img
+                  class="gitRepo"
+                  src="img/GitHub-Mark-120px-plus.png"
+                  alt="Github Repository"
+                  width="30px"
+                  height="30px"
+              /></a>
+              <p>
+                The <span>Weather Dashboard</span> is a single page web
+                application built with ReactJS and 3rd party weather API. A user
+                can get weather information by typing a city name or a zip code.
+                This app has a carousel view that displays weather detail page,
+                3 days forecast, and weather alert messages. This app has a
+                mobile responsive design depends on a device's screen size. It
+                also features toggling dark/light mode and toggling
+                celcious/fahrenheit function.<br />&nbsp;<br />Technologies
+                used:
+                <span>HTML, CSS, JavaScript, ReactJS, and 3rd part API</span>.
+              </p>
+            </div>
+          </div>
+          <!--  -->
           <!-- tictactoe -->
           <!--  -->
           <div class="tictactoe project">
