--- a/index.html
+++ b/index.html
@@ -181,9 +181,8 @@
                 3 days forecast, and weather alert messages. This app has a
                 mobile responsive design depends on a device's screen size. It
                 also features toggling dark/light mode and toggling
-                celcious/fahrenheit function.<br />&nbsp;<br />Technologies
-                used:
-                <span>HTML, CSS, JavaScript, ReactJS, and 3rd part API</span>.
+                celsius/fahrenheit function.<br />&nbsp;<br />Technologies used:
+                <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>.
               </p>
             </div>
           </div>
