--- a/index.html
+++ b/index.html
@@ -187,6 +187,43 @@
             </div>
           </div>
           <!--  -->
+          <!-- covid-19 numbers app -->
+          <!--  -->
+          <div class="project2 project">
+            <h3>COVID-19 NUMBERS APP</h3>
+            <div>
+              <a
+                href="https://woosik-covid-19-numbers.netlify.app/"
+                target="_blank"
+                ><img
+                  class="screenshot"
+                  src="img/project-2-img-20211223.png"
+                  alt="Project 2 Screen Shot"
+                  width="100%"
+                  height="auto"
+              /></a>
+              <a
+                href="https://github.com/dvlprwchoi/covid-19-numbers"
+                target="_blank"
+                ><img
+                  class="gitRepo"
+                  src="img/GitHub-Mark-120px-plus.png"
+                  alt="Github Repository"
+                  width="30px"
+                  height="30px"
+              /></a>
+              <p>
+                The <span>COVID-19 Numbers App</span> is a single page web
+                application built with ReactJS and 3rd party COVID-19 API. This
+                app has a mobile responsive design depends on a device's screen
+                size. It shows on-demand COVID-19 related numerical data. A user
+                also can get data by typing a county name.<br />&nbsp;<br />Technologies
+                used:
+                <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>.
+              </p>
+            </div>
+          </div>
+          <!--  -->
           <!-- tictactoe -->
           <!--  -->
           <div class="tictactoe project">
@@ -357,39 +394,6 @@
                 <span
                   >HTML, CSS, JavaScript, ReactJS, Mongoose, and MongoDB</span
                 >.
-              </p>
-            </div>
-          </div>
-          <!--  -->
-          <!-- covid-19 numbers app -->
-          <!--  -->
-          <div class="project2 project">
-            <h3>COVID-19 NUMBERS APP</h3>
-            <div>
-              <a
-                href="https://woosik-covid-19-numbers.netlify.app/"
-                target="_blank"
-                ><img
-                  class="screenshot"
-                  src="img/project-2-img-20211017.png"
-                  alt="Project 2 Screen Shot"
-                  width="100%"
-                  height="auto"
-              /></a>
-              <a
-                href="https://github.com/dvlprwchoi/covid-19-numbers"
-                target="_blank"
-                ><img
-                  class="gitRepo"
-                  src="img/GitHub-Mark-120px-plus.png"
-                  alt="Github Repository"
-                  width="30px"
-                  height="30px"
-              /></a>
-              <p>
-                The <span>COVID-19 Numbers App</span> shows on-demand COVID-19
-                related numerical data.<br />&nbsp;<br />Technologies used:
-                <span>HTML, CSS, JavaScript, ReactJS, and 3rd party API</span>.
               </p>
             </div>
           </div>
