--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <li>Python</li>
                 <li>Django</li>
                 <li>PostgreSQL</li>
+                <li>Google Firebase</li>
                 <!-- <li>Netlify</li> -->
                 <!-- <li>Heroku</li> -->
               </ul>
@@ -524,7 +525,7 @@
     <footer>
       <div class="footerMessage">
         <p>
-          LAST UPDATED: <span>DECEMBER 2021</span><br />
+          LAST UPDATED: <span>JANUARY 2022</span><br />
           BUILT BY: <span>WOO-SIK CHOI</span><br />
         </p>
       </div>
