--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="img/Profile-Picture.jpg" />
+    <meta property="og:image" content="img/Profile-Picture.jpg" width="50%" />
+    <meta
+      property="og:description"
+      content="Woo-Sik Choi is a software developer."
+    />
+    <meta property="og:title" content="Software Developer Woo-Sik Choi" />
+    <meta property="og:url" content="https://woosikchoi.com" />
+    <meta
+      property="description"
+      content="Woo-Sik Choi is a software developer."
+    />
+
     <title>Woo-Sik's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Font style for .title -->
