Update meta tags

--- a/index.html
+++ b/index.html
@@ -4,19 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="img/Profile-Picture.jpg" width="50%" />
-    <meta
-      property="og:description"
-      content="Woo-Sik Choi is a software developer."
-    />
-    <meta property="og:title" content="Software Developer Woo-Sik Choi" />
-    <meta property="og:url" content="https://woosikchoi.com" />
     <meta
       property="description"
       content="Woo-Sik Choi is a software developer."
     />
-
     <title>Woo-Sik's Portfolio</title>
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Software Developer Woo-Sik Choi" />
+    <meta
+      itemprop="description"
+      content="Woo-Sik Choi is a software developer."
+    />
+    <meta
+      itemprop="image"
+      content="https://woosikchoi.com/img/Profile-Picture.jpg"
+      width="50%"
+    />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://woosikchoi.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Software Developer Woo-Sik Choi" />
+    <meta
+      property="og:description"
+      content="Woo-Sik Choi is a software developer."
+    />
+    <meta property="og:image" content="img/Profile-Picture.jpg" width="50%" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Software Developer Woo-Sik Choi" />
+    <meta
+      name="twitter:description"
+      content="Woo-Sik Choi is a software developer."
+    />
+    <meta
+      name="twitter:image"
+      content="https://woosikchoi.com/img/Profile-Picture.jpg"
+      width="50%"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <!-- Font style for .title -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
