--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       width="50%"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="newstyle.css" />
     <!-- Font style for .title -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
